Fix vertical align and overflow in formpreview

--- a/va-virkailija/web/va/style/formpreview.less
+++ b/va-virkailija/web/va/style/formpreview.less
@@ -64,6 +64,8 @@
           &:not(.soresu-text-area).medium,
           &:not(.soresu-text-area).large {
             width: 235px;
+            vertical-align: top;
+            overflow-wrap: break-word;
           }
         }
       }
